package figures.auxiliary;

public class Point {

    private int x;
    private int y;
    private int z;

    public Point(int x, int y, int z) {
        this.x = x;
        this.y = y;
        this.z = z;
    }

    public int getCoordinateX() {
        return x;
    }
    public int getCoordinateY() {
        return y;
    }
    public int getCoordinateZ() {
        return z;
    }
}
