package figures.consts;

public interface Consts {
    int FOUR = 4;
    int DEVIL_MAX = 2147483647;
}
